make sure restaurant info lines do not wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,10 +186,12 @@ nav h1 a {
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
+  white-space: nowrap;
 }
 #restaurants-list li a {
   background-color: #b56000;
@@ -202,6 +204,7 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 
 /* ====================== Restaurant Details ====================== */
